--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,14 @@
     		<div class="navbar-inner">
         		<div class="container">
         			<div class="row-fluid">
-        				<div class="span6 offset4"><img src="/assets/logo.png"></div>
+        				<div class="span6 offset3"><img src="/assets/logo.png"></div>
+        				<div class="span3 loginDetails">
+        					<% if user_signed_in? %>
+        						<%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path %>
+        					<% else %>
+        						<%= link_to "Sign up", new_user_registration_path  %> or <%= link_to "Sign in", new_user_session_path %>
+        					<% end %>
+        				</div>
         			</div>
         		</div>
         	</div>
