--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -56,4 +56,8 @@
                 <%# Closing tag for the new row div %>
                 <% eventCount = eventCount + 1 %>
             <% end %>
+        </div>
+    </div>
+    
+
             
