--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>LetsDine</title>
-	<title>Letsdine</title>
+
 	<%= stylesheet_link_tag    "application", :media => "all" %>
 	<%= stylesheet_link_tag    "bootstrap", :media => "all" %>
 	<%= stylesheet_link_tag    "bootstrap-responsive", :media => "all" %>
@@ -20,6 +20,10 @@
 	<%= javascript_include_tag "jquery.bootstrap.wizard" %>
 	<%= javascript_include_tag "bootstrap-datepicker" %>
 	<%= javascript_include_tag "bootstrap-timepicker" %>
+	<%= javascript_include_tag "modernizr.custom.53451" %>
+	<%= javascript_include_tag "jquery.gallery" %>
+	
+	
 	
 	
 	<%= csrf_meta_tags %>
