Modified the date and time on the event/index page and the homepage

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -19,11 +19,12 @@
                         <div class="eventDetails">
                             <div class="detail">
                                 <img src="/assets/locationIcon.png">
-                                <%= restaurant.address %>
+                                <%= restaurant.name %>
                             </div>
                             <div class="detail">
                                 <img src="/assets/timeIcon.png">
-                                <%= event.event_time %>
+                                <%= event.event_date.strftime("%d %B %Y") %>
+                                <%= event.event_time.strftime("%I:%M%p") %>
                             </div>
                         </div>
                         <p>
