Basic slider on the homepage setup. It is still not rotating automatically. Have to add actual event images and test

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 	<%= stylesheet_link_tag    "custom", :media => "all" %>
 	<%= stylesheet_link_tag    "datepicker", :media => "all" %>
 	<%= stylesheet_link_tag    "bootstrap-timepicker", :media => "all" %>
+	<%= stylesheet_link_tag    "zoomflow", :media => "all" %>
 
 	<%= javascript_include_tag "application" %>
 	<%= javascript_include_tag "jquery-1.9.1" %>
@@ -18,8 +19,7 @@
 	<%= javascript_include_tag "jquery.bootstrap.wizard" %>
 	<%= javascript_include_tag "bootstrap-datepicker" %>
 	<%= javascript_include_tag "bootstrap-timepicker" %>
-	<%= javascript_include_tag "modernizr.custom.53451" %>
-	<%= javascript_include_tag "jquery.gallery" %>	
+	<%= javascript_include_tag "zoomflow/zoomflow.dev" %>
 	
 	<%= csrf_meta_tags %>
 
