--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,36 @@
 <div class="container">
     <div class="row-fluid">
         <div class="span12">
-            <section id="dg-container-id" class="dg-container">
-                <div class="dg-wrapper">
-                    <% @events.each do |event| %>
-                        <%= link_to event_path(event) do %>
-                            <% if event.event_image.blank? %>
-                                <% restaurant = Restaurant.find(event.restaurant_id) %>
-                                <%= image_tag restaurant.photo_url.to_s %>
-                            <% else %>
-                                <%= image_tag event.event_image_url.to_s %>
-                            <% end %>
-                        <% end %>    
-                    <% end %>
+            <div class="zoomflow">
+                <div class="items">
+                    <div class="item-tobe" data-source="/assets/img/1.jpg">
+                        <div class="captionCon">
+                            <div style="left: 51%; top: 55px; width:260px;" data-delay="secs0-5" data-effect=" unblur-white unscale fade" class="caption style_bigtitle"> PRESENTING
+                            </div>
+                            <div style="left: 51%; top: 110px; width:260px;" data-delay="secs1-5" data-effect="unblur-white unscale fade" class="caption style_bigtitle"> ZoomFlow
+                            </div>
+                            <div style="left: 55%; top: 170px; width:35%; text-align:right; opacity:0.3;" data-delay="secs2-0" data-effect="unblur-white unscale fade" class="caption style_bigtitle"> A spectacular banner rotator to showcase your portfolio.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-tobe" data-source="/assets/img/2.jpg">
+                        <div style="display: block; opacity: 1;" class="captionCon">
+                            <div style="left: 50px; top: 50px; color: #e5dc77;" data-delay="0.7" data-effect="slideright fade" class=" caption style_bigtitle"> RESPONSIVE
+                            </div>
+                            <div style="left: 163px; top: 53px; font-size: 16px;" data-delay="" data-effect="slideright fade" class=" caption style_bigtitle"> AND
+                            </div>
+                            <div style="left: 50px; top: 80px; width:200px; text-align:left;" data-delay="secs0-5" data-effect="slideright fade" class=" caption style_bigtitle"> TOUCH ENABLED
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-tobe" data-source="/assets/img/3.jpg">
+                        <div style="" class="captionCon">
+                            <div style="left: 0px; bottom: 10px; width: 100%" data-delay="" data-effect="slidebottom fade" class=" caption bg-lightblue style_noir"> Have <a href="http://bit/ly/nM4R6u" target="_blank">links</a> inside the captions, titles and any html content.
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </section>
+            </div>
         </div>
     </div>
 </div>
@@ -78,13 +94,11 @@
     </div>   
 
             
-<script type="text/javascript">
-    $(document).ready(function(){
-        
-        $('#dg-container-id').gallery({
-            autoplay    :   true
+<script>
+    jQuery(document).ready(function($){
+        jQuery(".zoomflow").zoomflow({
+            settings_slideshowTime:5
+            ,design_padding:150
         });
-        
     });
-    
-</script/>
+</script>
