--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -36,7 +36,7 @@
 }
 .masthead
 {
-	margin-top: 60px;
+	margin-top: 182px;
 	background: url("/assets/headerBG.png");
 }
 .homepage 
@@ -430,3 +430,8 @@
   bottom: -5px;
   z-index: -2;
   box-shadow: 0 8px 8px -5px rgba(0, 0, 0, 0.3); }
+
+.zoomflow
+{
+	margin-top: -220px;
+}
