--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,32 +3,19 @@
         <div class="span12">
             <div class="zoomflow">
                 <div class="items">
-                    <div class="item-tobe" data-source="/assets/img/1.jpg">
-                        <div class="captionCon">
-                            <div style="left: 51%; top: 55px; width:260px;" data-delay="secs0-5" data-effect=" unblur-white unscale fade" class="caption style_bigtitle"> PRESENTING
+                    <% @header_events.each do |event| %>
+                        <% restaurant = Restaurant.find(event.restaurant_id) %>
+                        <% if event.event_image.blank? %>
+                            <div class="item-tobe" data-source="<%= restaurant.photo_url.to_s %>">
+                        <% else %>
+                            <div class="item-tobe" data-source="<%= event.event_image_url.to_s %>">
+                        <% end %>
+                            <div class="captionCon">
+                                <div style="left: 51%; top: 55px; width:260px;" data-delay="secs0-5" data-effect=" unblur-white unscale fade" class="caption style_bigtitle"> <%= event.event_name %>
+                                </div>
                             </div>
-                            <div style="left: 51%; top: 110px; width:260px;" data-delay="secs1-5" data-effect="unblur-white unscale fade" class="caption style_bigtitle"> ZoomFlow
-                            </div>
-                            <div style="left: 55%; top: 170px; width:35%; text-align:right; opacity:0.3;" data-delay="secs2-0" data-effect="unblur-white unscale fade" class="caption style_bigtitle"> A spectacular banner rotator to showcase your portfolio.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item-tobe" data-source="/assets/img/2.jpg">
-                        <div style="display: block; opacity: 1;" class="captionCon">
-                            <div style="left: 50px; top: 50px; color: #e5dc77;" data-delay="0.7" data-effect="slideright fade" class=" caption style_bigtitle"> RESPONSIVE
-                            </div>
-                            <div style="left: 163px; top: 53px; font-size: 16px;" data-delay="" data-effect="slideright fade" class=" caption style_bigtitle"> AND
-                            </div>
-                            <div style="left: 50px; top: 80px; width:200px; text-align:left;" data-delay="secs0-5" data-effect="slideright fade" class=" caption style_bigtitle"> TOUCH ENABLED
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item-tobe" data-source="/assets/img/3.jpg">
-                        <div style="" class="captionCon">
-                            <div style="left: 0px; bottom: 10px; width: 100%" data-delay="" data-effect="slidebottom fade" class=" caption bg-lightblue style_noir"> Have <a href="http://bit/ly/nM4R6u" target="_blank">links</a> inside the captions, titles and any html content.
-                            </div>
-                        </div>
-                    </div>
+                        </div>    
+                    <% end %>
                 </div>
             </div>
         </div>
