--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -67,6 +67,9 @@
                                 <% user =  User.find(personAttending.user_id) %>
                                 <%= image_tag "/assets/noProfilePic.png", "data-toggle" => "tooltip", :title => user.name, :class => "profilePic" %>
                               <% end %>
+                              <p>
+                                <%= link_to "See All People Attending", event_path(event) %>
+                            </p>
                         </div>
                     </div>
                 </div>    
