Added the name of the person signed in at the top of the page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
         				<div class="span6 offset3"><img src="/assets/logo.png"></div>
         				<div class="span3 loginDetails">
         					<% if user_signed_in? %>
-        						<%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path %>
+        						<%= current_user.name %> | <%= link_to "Sign out", destroy_user_session_path %>
         					<% else %>
         						<%= link_to "Sign up", new_user_registration_path  %> or <%= link_to "Sign in", new_user_session_path %>
         					<% end %>
