Added a field for the image from facebook. Still need to show it on the pages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -57,7 +57,7 @@
                         <div class="peopleAttending">
                         <% event.attendee.each do |personAttending| %> 
                             <% if personAttending.blank? %>
-                                <%= image_tag "noProfilePic" %>
+                                <%# image_tag "noProfilePic" %>
                             <% else %>
                             <% end %>
                         <% end %>
