Added the price to the event show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -28,6 +28,7 @@
     </div>
     <div class="span6">
       <h1><%= @event.event_name %></h1>    
+      <h3>Price: Rs <%= restaurant.price %></h3>
       <p>
         <%= @event.event_description %>      
       </p>
