Added the price to the event creation page

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -61,6 +61,7 @@
                 <%= image_tag restaurant.photo_url(:thumb).to_s %>
                 <div class="restaurantDetails">
                   <h4><%= restaurant.name %></h4>
+                  <h4>Price: <%= restaurant.price %> </h4>
                   <a class="medium awesome blue">View menu</a>
                 </div>
               </div>
