Added the ability to post a message to a users facebook wall when creating an event

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -103,6 +103,10 @@
         </p>
         <%= f.text_area :invitees, :rows => 5 %>
       </div>
+      <div class="field share_on_facebook">
+        <%= check_box_tag 'facebook_share', :true %>
+        Share on Facebook
+      </div>
       <div class="field">
         <div class="actions">
           <%= f.submit :class => "large awesome green" %>
