--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -289,7 +289,14 @@
 }
 .event_date_time
 {
+	padding: 10px;
 	position: absolute;
+	top: 20px;
+	left: 20px;
+	background: rgba(0,0,0,0.8);
+	color: #fff;
+	font-weight: bold;
+	font-size: 21px;
 }
 
 .restaurantList
