--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,13 @@
         				</div>
         			</div>
         		</div>
+        		<div class="container tagline-container">
+        			<div class="row-fluid">
+        				<div class="span6 offset3 tagline">
+        					<h4>Meet great people over great food</h4>
+        				</div>
+        			</div>
+        		</div>
         	</div>
         </div>
 	</div>
