--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -36,7 +36,7 @@
 }
 .masthead
 {
-	margin-top: 64px;
+	margin-top: 110px;
 	background: url("/assets/headerBG.png");
 }
 .homepage 
@@ -445,4 +445,13 @@
 .share_on_facebook
 {
 	margin-bottom: 10px;
+}
+.tagline-container
+{
+
+}
+.tagline
+{
+	margin-top: 10px;
+	color: #fff;
 }
