--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :javascript do %>
+    <%= javascript_include_tag "closed-event-overlay" %>
+<% end %>
+
 <% restaurant = Restaurant.find(@event.restaurant_id) %>
 <input type="hidden" value=<%= @event.id %> id="event_id" >
 <div class="container">
@@ -17,7 +21,12 @@
         <% else %>
             <%= image_tag @event.event_image_url.to_s %>
         <% end %>
-        
+        <% if @event.status == 'closed' %>
+            <div class="closed">
+                <h3>Closed</h3>
+            </div>    
+        <% end %>
+
         <div class="event_date_time">
           <%= @event.event_date.strftime("%d %B %Y") %>
           <%= @event.event_time.strftime("%I:%M%p") %>
@@ -38,34 +47,40 @@
         <%= @event.event_description %>      
       </p>
 
-      <%# Join form %>
-      <%= form_for @attendee, :url => attendee_path, :html => {:method => :post} do |f|%>
-        <%# f.error_messages %>
+      <% if @event.status == "closed" %>
+          <%= render :partial => "event_notify_emails/form",
+                      :locals => {:event_id => @event.id} %>
+      <% else %>
+        <%# Join form %>
+        <%= form_for @attendee, :url => attendee_path, :html => {:method => :post} do |f|%>
+          <%# f.error_messages %>
 
-        <% if @attendee.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(@attendee.errors.count, "error") %> prohibited this event from being saved:</h2>
+          <% if @attendee.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@attendee.errors.count, "error") %> prohibited this event from being saved:</h2>
 
-            <ul>
-            <% @attendee.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
-            <% end %>
-            </ul>
-          </div>  
-        <% end %>
-        <div class="field">
-          <%= f.label :seats, "Number of people attending" %>
-          <%= f.number_field :seats, :required => true %>
-        </div>
-        <div class="field">
-          <%= f.label :phone_number, "Your phone number"%>
-          <%= f.text_field :phone_number, :required => true %>
-        </div>
-        <%= f.hidden_field :event_id, :value => @event.id %>
+              <ul>
+              <% @attendee.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+              <% end %>
+              </ul>
+            </div>  
+          <% end %>
+          <div class="field">
+            <%= f.label :seats, "Number of people attending" %>
+            <%= f.number_field :seats, :required => true %>
+          </div>
+          <div class="field">
+            <%= f.label :phone_number, "Your phone number"%>
+            <%= f.text_field :phone_number, :required => true %>
+          </div>
+          <%= f.hidden_field :event_id, :value => @event.id %>
 
-        <%= f.submit "Join this event", :class => "large red awesome"  %>
+          <%= f.submit "Join this event", :class => "large red awesome"  %>
 
+        <% end %>  
       <% end %>
+      
       
     </div>
   </div>
