--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :javascript do %>
+    <%= javascript_include_tag "closed-event-overlay" %>
+<% end %>
+
 <div class="container">
     <div class="row-fluid">
         <div class="span12">
@@ -33,12 +37,20 @@
                 <% end %>
 
                 <div class="span3">
-                    <div class="event">
+                    
+                    <div class="event">                    
                         <% if event.event_image.blank? %>
                             <%= image_tag restaurant.photo_url.to_s %>
                         <% else %>
                             <%= image_tag event.event_image_url.to_s %>
                         <% end %>
+
+                        <% if event.status == 'closed' %>
+                            <div class="closed">
+                                <h3>Closed</h3>
+                            </div>    
+                        <% end %>
+                        
                         <h3><%= link_to event.event_name, event_path(event) %></h3>
                         <div class="eventDetails">
                             <div class="detail">
@@ -88,3 +100,4 @@
         });
     });
 </script>
+
