--- a/app/views/invite_mailer/invite.text.erb
+++ b/app/views/invite_mailer/invite.text.erb
@@ -4,7 +4,7 @@ Hi there,
 
 You can join the event by going to the following url
 
-<%= event_url(@event) %>
+<%= root_path + event_url(@event) %>
 
 Hoping you have a great time,
 
