Modified the url that is sent to the user when they are invited to an event

--- a/app/views/invite_mailer/invite.text.erb
+++ b/app/views/invite_mailer/invite.text.erb
@@ -4,7 +4,9 @@ Hi there,
 
 You can join the event by going to the following url
 
-<%= root_path + event_url(@event) %>
+
+
+<%= root_url + event_url(@event) %>
 
 Hoping you have a great time,
 
