--- a/app/views/invite_mailer/invite.text.erb
+++ b/app/views/invite_mailer/invite.text.erb
@@ -4,9 +4,7 @@ Hi there,
 
 You can join the event by going to the following url
 
-
-
-<%= root_url + event_url(@event) %>
+<%= event_url(@event, :host => "letsdine.co") %>
 
 Hoping you have a great time,
 
