--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -128,7 +128,11 @@
 
       <% @event.attendee.each do |personAttending| %>
         <% user =  User.find(personAttending.user_id) %>
-        <%= image_tag "/assets/noProfilePic.png", "data-toggle" => "tooltip", :title => user.name, :class => "profilePic" %>
+        <% if user.image.blank? %>
+            <%= image_tag "/assets/noProfilePic.png", "data-toggle" => "tooltip", :title => user.name, :class => "profilePic" %>    
+        <% else %>
+            <%= image_tag user.image.to_s, "data-toggle" => "tooltip", :title => user.name, :class => "profilePic" %>    
+        <% end %>
       <% end %>
     </div>
   </div>
