--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,7 @@
                 <%# Checking if a new row has to be created %>
                 <% if ( eventCount%4 ) == 0 %>
                     <div class="row-fluid">  
-                          
+
                 <% end %>
 
                 <div class="span3">
@@ -68,7 +68,7 @@
                             <%= event.event_description %> <%= link_to "See event", event_path(event) %>
                         </p>
                         <div class="peopleAttending">
-                            <% event.attendee.each do |personAttending| %>
+                            <% event.attendee.first(4).each do |personAttending| %>
                                 <% user =  User.find(personAttending.user_id) %>
                                 <% if user.image.blank? %>
                                     <%= image_tag "/assets/noProfilePic.png", "data-toggle" => "tooltip", :title => user.name, :class => "profilePic" %>    
