Reduced the number of people pictures shown in the event index page to 4

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -40,7 +40,7 @@
                             <%= event.event_description %> <%= link_to "See event", event_path(event) %>
                         </p>
                         <div class="peopleAttending">
-                            <% event.attendee.each do |personAttending| %>
+                            <% event.attendee.first(4).each do |personAttending| %>
                                 <% user =  User.find(personAttending.user_id) %>
                                 <% if user.image.blank? %>
                                     <%= image_tag "/assets/noProfilePic.png", "data-toggle" => "tooltip", :title => user.name, :class => "profilePic" %>    
