Fixed the issue in the event show page where the items were not getting their open and closing div tags properly

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -110,12 +110,10 @@
           <div><%= menu_item.name %></div>
         <% end %>
 
-
-
-        <% if (course_count%2 == 0 && course_count != 0) || (course_count + 1) > total_number_of_courses %>
+        <% if (course_count%2 == 0) %>
             </div>
           </div>
-          <% course_count = course_count + 1 %>
+          <% course_count = 1 %>
         <% else %>
           </div>  
           <% course_count = course_count + 1 %>
