--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -27,7 +27,7 @@
       <div class="field">
         <%= f.label :event_date %>
         <%#f.date_select :event_date %>
-        <div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+        <div class="input-append date" id="dp3" data-date="<%= Time.now.strftime("%d/%m/%Y") %>" data-date-format="dd-mm-yyyy">
           <%= f.text_field :event_date %>
           <span class="add-on"><i class="icon-calendar"></i></span>
           <!--<input size="16" type="text" value="12-02-2012" readonly>-->
