--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,6 +66,14 @@
 		</div>
 	</div>
 
+	<div class="container">
+		<div class="row-fluid">
+			<div class="span12">
+				<%= render 'layouts/messages' %>
+			</div>
+		</div>
+	</div>
+
 
 	<%= yield %>	
 
