Modified the event_description show that it uses the truncate method instead of a custome method. The custom method was removing the spaces

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                         <p>
-                            <%= event.event_description %> <%= link_to "See event", event_path(event) %>
+                            <%= truncate(event.event_description, :length => 100) %> <%= link_to "See event", event_path(event) %>
                         </p>
                         <div class="peopleAttending">
                             <% event.attendee.first(4).each do |personAttending| %>
