Added a full status so that when the status of the event is set to full the overlay says full instead of closed

--- a/app/views/event_notify_emails/_form.html.erb
+++ b/app/views/event_notify_emails/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <p>Enter your email address and we will notify you as soon as a similar event is opened</p>
+  <p>Enter your email address and we will notify you as soon as a similar event is started</p>
   <div class="field">
     <%= f.label :email_address %>
     <%= f.text_field :email_address %>
