Added code so that in the dashboard the user list is ordeed based on the uder id

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -70,7 +70,7 @@
             <% end %>
             <div class="field">
               <%= f.label :seats, "Number of people attending" %>
-              <%= f.number_field :seats, :required => true %>
+              <%= f.number_field :seats, :required => true, :min => 1 %>
             </div>
             <div class="field">
               <%= f.label :phone_number, "Your phone number"%>
